--- a/bindu.tex
+++ b/bindu.tex
@@ -136,219 +136,259 @@ The third chapter contains a comparative analysis of the complex early modern yo
   ]
   \begin{edition}
     \ekddiv{
-      head={[\uproman{30}. \textbf{ādhāracakrasya bhedāḥ}]},
+      head={[\uproman{37}. \textbf{piṇḍamadhye saptasamudrāḥ}]},
       type=section,
       depth=2, 
-      n=XXX
+      n=XXXVII
     }
-    \xmlhead[h30]{[XXX. ādhāracakrasya bhedāḥ]}
+    \xmlhead[h37]{[XXXVII. piṇḍamadhye saptasamudrāḥ]}
     \phantomsection
-    \addcontentsline{toc}{section}{XXX. ādhāracakrasya bhedāḥ}
- \begin{prose}[p30_01]
-   \noindent
+      \addcontentsline{toc}{section}{XXXVII. piṇḍamadhye saptasamudrāḥ}
+    \phantomsection\label{saptasamudra}
+       \begin{prose}[p37_01]
+      \noindent
+%----------------------------
+%idānīṃ piṃḍamadhye saptasamudrāḥ kathyante// prasvedamadhye kṣārasamudraḥ/   \E
+%idānīṃ piṃḍamadhye saptasamudrāḥ kathyaṃte   prasvedamadhye kṣārasamudraḥ    \P
+%idānīṃ piṃḍamadhye samudrāḥ      kathyate//  prasvedamadhye kṣārasamudraḥ//  \B
+%idānīṃ piṃḍamadhye samudrāḥ      kathyaṃte// prasvedamadhye sārasasamudraḥ// \L
+%\om                                                                          \N1
+%idānīṃ piṃḍamadhye saptasamudrāḥ kathyete//  prasvedamadhye kṣārasasamudra   \D
+%idānīṃ piṃḍamadhye saptasamudrāḥ kathyaṃte//  prasvedamadhye kṣārasasamudra   \K1
+%idānīṃ piṃḍamadhye saptasamudrāḥ kathyaṃte//  prasvedamadhye kṣārasasamudraḥ//   \J      
+%\om                                                                          \N2
+%idānīṃ piṃḍamadhye saptasamudrāḥ kathyaṃte      svedamadhye kṣārasasamudraḥ  \U1 %%%288.jpg
+%idānīṃ piṃḍamadhye saptasamudrāḥ kathyaṃte// prasvedamadhye kṣārasāgaraḥ//   \U2
 %-----------------------------
-%idānīm ādhāracakrasya bhedāḥ kathyanta/   \E
-%idānīm ādhāracakrasya bhedaḥ kathyate     \P
-%idānīm ādhāracakrasya bhedā  kathyaṃte/    \B DSCN7165.jpg Z.3
-%idānīm ādhāracakrasya bhedā  kathyaṃte//   \L
-%idānīm ādhāracakrasya bhedaḥ kathyate/    \N1
-%idānīṃ ādhāracakrasya bhedaḥ kathyate//   \D
-%idānīṃ ādhāracakrasya bhedaḥ kathyate//   \K1
-%idānīṃ ādhāracakrasya bhedāḥ kathyate//   \J   
-%idānī  ādhāracakrasya bhedaḥ kathyaṃte/   \N2
-%idānīṃ ādhāracakrasya bhedāḥ kathyaṃte    \U1
-%idānīṃ ādhāracakrasya bhedāḥ kathyaṃte // \U2
-%-----------------------------
-%Now the divisions of the totality of container [for concentration] are taught.
-%-----------------------------
-   \note[type=source, labelb=_75b, labele=_75e, nosep]{cf. YSv (PT, p. 839) = YK 2.15: ṣoḍaśādhārabhedan tu śṛṇu devi viśeṣataḥ |}
-   \note[type=source, labelb=_75b, labele=_75e, nosep]{cf. SSP 2.10 (Ed. p. 32): atha ṣoḍaśādhārāḥ kathyante |}
-   \note[type=testium, labelb=_75b, labele=_75e, nosep]{cf. \citetitle{hathasamketacandrikajodhpur} (MMPP 2244 f. 98r ll. 3-4): ity ādhārāḥ ṣodaśayaṃ athoktānāṃ ṣoḍaśādhārāṇāṃ kartavyatām āha |}
-\app{\lem[wit={ceteri}, alt={idānīm}]{idānī\skp{m-ā}}\linelabel{_75b}
-  \rdg[wit={N2}]{idānī}
-}\skm{m-ā}dhāracakrasya
-\app{\lem[wit={ceteri}]{bhedāḥ}
-  \rdg[wit={B,L}]{bhedā}}
+%Now the seven oceans within the body are taught. (1) Within sweat is the salt ocean. 
+%----------------------------
+      \note[type=source, labelb=_106b, labele=_106e, nosep]{cf. YSv (PT, pp. 842-43): samudrāḥ sapta kathyante piṇḍamadhye vyavasthitāḥ | lavaṇekṣusurāsarpirdadhidugdhajalāntakāḥ | lavaṇaṃ svedamadhye tu ikṣūrakte madhu tvaci | sarpir medo vasāmadhye dadhi kṣīraṃ lalāṭake | vīryamadhye 'mṛto jñeyaḥ pāde kūrmaḥ sthito mahān |}
+      \note[type=source, labelb=_106b, labele=_106e, nosep]{cf. SSP 3.8 (Ed. p. 29): mūrte kṣārasamudraḥ | śukre 'mṛtasamudraḥ | lālāyāṃ kṣīrasamudraḥ | kaphe dadhisamudraḥ | medasi ghṛtasamudraḥ | vasāyāṃ madhusamudraḥ | rakte ikṣusamudraḥ | evaṃ saptasamudrāḥ ||}
+idānīṃ piṇḍamadhye\linelabel{_106b}
+\app{\lem[wit={ceteri}]{saptasamudrāḥ}
+  \rdg[wit={B,L}]{samudrāḥ}}\hfill
 \app{\lem[wit={ceteri}]{kathyante}
-  \rdg[wit={E}]{kathyanta}
-  \rdg[wit={D,N1}]{kathyate}}/\linelabel{_75e}
+  \rdg[wit={B}]{kathyate}
+  \rdg[wit={D}]{kathyete}}/\hfill
+\app{\lem[wit={ceteri}]{prasvedamadhye}
+  \rdg[wit={U1}]{svedamadhye}}\hfill
+\app{\lem[wit={ceteri}]{kṣārasamudraḥ}
+  \rdg[wit={L}]{sārasasamudraḥ}
+  \rdg[wit={U1}]{kṣārasasamudraḥ}
+  \rdg[wit={K1}]{kṣārasasamudra}
+  \rdg[wit={U2}]{kṣārasāgaraḥ}}\dd{}\hfill
+%----------------------------
+%lalāṭamadhye kṣīraḥ samudraḥ/            vāṅmadhye                                 madhusamudraḥ/  kaphamadhye  dadhisamudraḥ/  medomadhye ghṛtasamudraḥ/  \E
+%lālāmadhye   kṣīrasamudraḥ               vasāmadhye                                madhusamudraḥ   kaphamadhye  dadhisamudraḥ   medomadhye ghṛtasamudraḥ   \P
+%lalāṭamadhye kṣīrasamudraḥ// raktamadhye vasāmadhye                                madasamudraḥ    kaphamadhye  dadhisamudraḥ// medomadhye ghṛtasamudraḥ// \B
+%lalāṭamadhye kṣīrasamudraḥ// raktamadhye vasāmadhye                                madyasamudraḥ// kaphamadhye  dadhisamudraḥ// medamadhye ghṛtasamudraḥ// \L
+%\om                                                                 \N1
+%lalāṭamadhye kṣīrasamudraḥ/              vasāmadhye                                                             dadhisamudraḥ// medamadhye ghṛtasamudraḥ// \D
+%lalāṭamadhye kṣīrasamudraḥ/              vasāmadhye                                                             dadhisamudraḥ// medamadhye ghṛtasamudraḥ// \K1
+%lalāṭamadhye kṣīrasamudraḥ//              vasāmadhye                                                             dadhisamudraḥ// medamadhye ghṛtasamudraḥ// \J
+%\om                                                                                                                                                         \N2
+%lalāṭamadhye kṣīrasamudraḥ               vasāmadhye                                                             dadhisamudraḥ   medamadhye ghṛtasamudraḥ   \U1 %%%288.jpg
+%lalāṭamadhye kṣīrasamudraḥ//             vīryamadhye svāduḥ samudraḥ// majjāmadhye madhusamūdraḥ// kaphamadhye  dadhisamudraḥ// medamadhye ghṛtasamudraḥ// \U2
 %-----------------------------
-%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt              dṛṣṭiḥ sthirā bhavati/ \E
-%pādayor aṃguṣṭhe  tejaso  lakṣyakaraṇāt              dṛṣṭiḥ sthirā bhavati  \P
-%pādayor aṃguṣṭhai tejasaṃ lakṣaṃ kartavyaṃ kāraṇāt// dṛṣṭiḥ sthirā bhavati/ \B
-%pādayor aṃguṣṭhe  tejasaṃ lakṣaṃ karttavyaṃ kāraṇāt  dṛṣṭiḥ sthirā bhavatī/ \L
-%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt              dṛṣṭisthirā   bhavati/ \N1
-%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt              dṛṣṭiḥ sthirā bhavati \D
-%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt//            dṛṣṭiḥ sthirā bhavati \K1
-%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt              dṛṣṭiḥ sthirā bhavati// \J
-%pādayor aṃguṣṭhe  tejaso  lakṣakāraṇāt               dṛṣṭisthirā   bhavati/ \N2
-%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt              dṛṣṭisthirā   bhavati \U1
-%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt              dṛṣṭisthirā   bhavati// \U2 %%%415.jpg
+%(2) Within the forehead is the milk ocean. (3) Within the marrow is the honey-ocean. (4) In the phlegm is the sour milk ocean. (5) In the fat is the butter ocean.  
+%----------------------------
+\app{\lem[wit={ceteri}]{lalāṭamadhye}
+  \rdg[wit={P}]{lālāmadhye}}\\
+\app{\lem[wit={ceteri}, alt={kṣīrasamudraḥ}]{kṣīrasamudraḥ}
+  \rdg[wit={E}]{kṣīraḥ samudraḥ}}\dd{}
+\app{\lem[wit={ceteri},alt={vasāmadhye}]{vasāmadhye}
+  \rdg[wit={E}]{vāṅmadhye}
+  \rdg[wit={U2}]{vīryamadhye svāduḥ samudraḥ || majjāmadhye}}
+\app{\lem[wit={E,P}]{madhusamudraḥ}
+  \rdg[wit={B}]{madasamudraḥ}
+  \rdg[wit={L}]{madyasamudraḥ}
+  \rdg[wit={U2}]{madhusamūdraḥ}
+  \rdg[wit={D,J,K1,U1}]{\om}}\dd{}
+\app{\lem[wit={ceteri}]{kaphamadhye}
+  \rdg[wit={D,J,K1,U1}]{\om}} dadhisamudraḥ\dd{}
+\app{\lem[wit={B,E,P}, alt={medo°}]{medo}
+ \rdg[wit={ceteri}]{meda°}}madhye ghṛtasamudraḥ\dd{}
+%----------------------------
+%                           rasamadhye   ikṣurasasamudraḥ// vīryamadhye svādusamudraḥ/                pādamadhye kūrmasthānam//   \E
+%                           raktamadhye  ikṣurasasamudraḥ   vīryamadhye svādudakasamudraḥ             pādamadhye kūrmasthānam     \P
+%                                        ikṣusamudraḥ/      vīryamadhye svādukasamudraḥ/  karmasthāna pādasamadhye/               \B
+%                                        ikṣusamudraḥ//     vīryamadhye svādukasamudraḥ// karmasthāna pādamadhye                  \L
+%\om                                                                                                                             \N1
+%vasāmadhye madhusamudraḥ// raktamadhye  ikṣusamudraḥ//     vīryamadhye amṛtasamudraḥ/                pādam tale  kūrmasthānaṃ/    \D
+%vasāmadhye madhusamudraḥ// raktamadhye  ikṣusamudraḥ//     vīryamadhye amṛtasamudraḥ//                pādam tale  kūrmasthānaṃ/  \K1
+%npāmadhye madhusamudraḥ// raktamadhye  ikṣusamudraḥ//     vīryamadhye mṛtasamudraḥ//cha//           pādamadhye  kūrmasthānaṃ/    \J
+%\om                                                                                                                             \N2
+%vasāmadhye madhusamudraḥ   raktamadhye  ikṣurasamudraḥ     vīryamadhye mṛtasamudraḥ                  pādamadhye kūrmasthānaṃ     \U1 %%%288.jpg
+%                           raktamadhye  ikṣurasamudraḥ//                                                                         \U2
 %-----------------------------
-%From the execution of the fixation onto the light at the big toe of the feet stability of the gaze arises.
-%-----------------------------
-\note[type=source, labelb=_76b, labele=_76e, nosep]{cf. YSv (PT, p. 839): aṅguṣṭhapādayos tejaḥ salakṣasthiradṛṣṭimān | pādāṅguṣṭhe ya ādhāraḥ prathamo (\textit{prathamaṃ} YK 2.16) yogatattvataḥ |}
-\note[type=source, labelb=_76b, labele=_76e, nosep]{cf. SSP 2.10 (Ed. p. 32): tatra prathamaḥ pādāṅguṣṭhādhāraḥ | tatrāgratas tejomayaṃ dhyāyet | dṛṣṭiḥ sthirā bhavati |}
-\note[type=testium, labelb=_76b, labele=_76e, nosep]{ \approx  \citetitle{hathasamketacandrikajodhpur} (MMPP 2244 f. 98r l. 4): tatra mūlādhāraḥ 1 pādayor aṃguṣṭhe tejaso lakṣyakaraṇād dṛṣṭiḥ sthirā bhavati 2 ity ādhāracakraṃ |}
-pādayo\skp{r-aṃ}\app{\lem[wit={ceteri}, alt={aṅguṣṭhe}]{\skm{r-aṅ}guṣṭhe}\linelabel{_76b}
-  \rdg[wit={B}]{aṃguṣṭhai}}
-\app{\lem[wit={ceteri}]{tejaso}
-  \rdg[wit={B,L}]{tejasaṃ}}
-\app{\lem[wit={ceteri}, alt={lakṣya°}]{lakṣya}
-  \rdg[wit={N2}]{lakṣa°}
-  \rdg[wit={B,L}]{lakṣaṃ kartavyaṃ}
-}\app{\lem[wit={ceteri}, alt={°kāraṇād}]{kāraṇā\skp{d-dṛ}}
-    \rdg[wit={P}]{°karaṇāt}
-  }\app{\lem[wit={ceteri}, alt={dṛṣṭiḥ}]{\skm{d-dṛ}ṣṭiḥ}
-   \rdg[wit={N1,N2,U1,U2}]{dṛṣṭi°}} sthirā
- \app{\lem[wit={ceteri}]{bhavati}
-   \rdg[wit={L}]{bhavatī}}/\linelabel{_76e}
-%-----------------------------
-%dvitīyo mūlādhāraḥ/  pādāṃguṣṭhasya mūle parapādasya  pārṣṇiḥ                                         sthāpyate tadāgniḥ prabalo bhavati/ \E
-%dvitīyo mūlādhāraḥ   pādāṃguṣṭhasya mūle 'parapādasya dhāraḥ pādāṃduṣṭhasya mūleḥ parapādasya pārṣṇiḥ sthāpyate tadāgniḥ prabalo bhavati \P
-%dvitīyo mūlādhāraḥ/  pādāṃguṣṭhasya mūle aparasya pādapārṣṇiḥ                                         syāpyate tadāgniḥ  prabalo bhavatī/ \B
-%dvitīyo mūlādhāraḥ   pādāṃguṣṭhasya mūle aparasya pādapārṣṇīḥ                                         syāpyate tadāgniḥ  prabalo bhavatī/ \L
-%dvitīyo mūlādhāraḥ/  pādāṃguṣṭhasya mūle aparapādasya pārṣṇiḥ                                         sthāpyate agniḥ    prabalo bhavati/   \N1
-%dvitīyo mūlādhāraḥ// pādāṃguṣṭhasya mūle aparapādasya pārṣṇiḥ                                         sthāpyate agni-----prabalo bhavati//   \D  %%%p.12 recto
-%dvitīyo mūlādhāraḥ// pādāṃguṣṭhasya mūle aparapādasya pārṣṇi                                         sthāpyate agni-----prabalo bhavati//   \K1
-%dvitīyo mūlādhāraḥ pādāṃguṣṭhasya mūle adharapādasya pārṣṇiḥ                                         sthāpyate// agniprabalo bhavati//   \J 
-%dvitīyo mūlādhāraḥ   pādāṃguṣṭhasya mūle aparapādasya pārṣṇiḥ                                         sthāpyate/ \om                     \N2
-%dvitīyo mūlādharaḥ   pādāṃguṣṭhasya mūle aparapādasya pārṣṇiḥ                                         sthāpyate agniṃ ---prabalo bhavati    \U1
-%dvitīyo mūlādhare    pādāṃguṣṭhasya mūle 'parapādasya pārṣṇiḥ                                         sthāyyaṃte//                       \U2
-%-----------------------------
-%The second root-container is the second [one]. The heel of the other foot is caused to be placed at the root of the big toe. As a result the fire is strengthened. 
-%-----------------------------
- \note[type=source, labelb=_77b, labele=_77e, nosep]{cf. YSv (PT, p. 839): dvitīyaṃ pādamūlan tu pādamūlaparaṃ (\textit{pādamūlaṃ paraṃ} YK 2.16) sa vai | pādasya pārṣṇī (\textit{pārṣṇi} YK 2.17a) saṃsthāpya balavān prabhaven muniḥ | pādamūle 'thavā pādāṅguṣṭhamūlaṃ (\textit{pṛṣṭhe pādāṅguṣṭhe} YK 2.17) vidhārayet ||}%The second is the root of the foot. That root of the foot is truly superior. Having placed himself on the heel of the foot the Muni becomes powerful. He shall hold [the gaze?] at the root of the foot or at the big toe.
- \note[type=source, labelb=_77b, labele=_77e, nosep]{cf. SSP 2.11 (Ed. p. 33): dvitīyo mūlādhāras taṃ vāmapādapārṣṇinā niṣpīḍya sthātavyam | tatrāgnidīpanaṃ bhavati |}
- \note[type=testium, labelb=_77b, labele=_77e, nosep]{ \approx  \citetitle{hathasamketacandrikajodhpur} (MMPP 2244 f. 98 ll. 5-7): atha dvitīyādhāraḥ | tatra tatra vāmapādāṃguṣṭasya mūlam aparapādasya pārṣṇis tasmin sthāpyate | tad āgneḥ pradīpanaṃ bhavati | ekaḥ pārṣṇi mūlādhāre dṛḍhaṃ sthāypyate | tasya pādasya mūla aṃguṣṭamūlam aparasya pādasya pārṣṇinā saṃpīḍya ciraṃ sthiraṃ sthīyate tadāgnīm agni dīpyate | iti dvitīyadhāraḥ |}
- %The second is the Mūlādhara which is to be pressend with the left heel. This enhances the bodily fire.
-dvitīyo \linelabel{_77b}
-\app{\lem[wit={ceteri}]{mūlādhāraḥ}
-  \rdg[wit={U1}]{mūlādharaḥ}
-  \rdg[wit={U2}]{mūlādhare}}/ 
-pādāṅguṣṭhasya mūle\app{\lem[wit={ceteri},alt={'para°}]{'para}
-  \rdg[wit={D,K1,N1,N2,U1}]{apara°}
-  \rdg[wit={B,L}]{aparasya}
-  \rdg[wit={J}]{adhara°}
-}\app{\lem[wit={ceteri}]{pādasya}
-  \rdg[wit={B,L}]{pāda°}}
-\app{\lem[wit={ceteri}]{pārṣṇiḥ}
-  \rdg[wit={L}]{°pārṣṇīḥ}
-  \rdg[wit={K1}]{pārṣṇi}
-  \rdg[wit={P}]{dhāraḥ pādāṃduṣṭhasya mūleḥ parapādasya pārṣṇiḥ}}
-\app{\lem[wit={ceteri}]{sthāpyate}
-  \rdg[wit={B,L}]{syāpyate}
-  \rdg[wit={U2}]{sthāyyaṃte}}/
-\app{\lem[wit={N1}]{agniḥ}
-  \rdg[wit={U1}]{agniṃ}
-  \rdg[wit={D,J,K1,}]{agni°}
-  \rdg[wit={B,E,L,P}]{tadāgniḥ}
-  \rdg[wit={N2,U2}]{\om}}
-\app{\lem[wit={ceteri}]{prabalo}
-  \rdg[wit={N2,U2}]{\om}}
-\app{\lem[wit={ceteri}]{bhavati}
-  \rdg[wit={B,L}]{bhavatī}
-  \rdg[wit={N2,U2}]{\om}}/
-%-----------------------------
-%ekaḥ  pārṣṇir ādau  mūlādhāre  sthāpyate/      \E [P.41]
-%ekā   pārṣṇir ādau  mūlādhāre  sthāpyate      \P
-%ekā   pārṣṇir ādau  mūlādhāra  sthāpyate      \B
-%ekā   pārṣṇir ādau  mūlādhārā  sthāpyate      \L
-%ekā   pārṣṇiḥ       mūladdhāre sthāpyate/      \N1
-%ekā   pārṣṇiḥ       mūlādhārai sthāpyate//     \D
-%ekā   pārṣṇiḥ       mūlādhārai sthāpyate//     \K1
-%ekaḥ  pārṣṇiḥ       mūlādhāraṃ sthāpyate// \J 
-% \om -------------------------------------     \N2
-%ekāṃ pārṣṇir        mūlādhāra sthāpyate        \U1
-% \om                                          \U2
-%-----------------------------
-%One heel is caused to be placed at the Root-container. 
-%-----------------------------
-\app{\lem[wit={ceteri}]{ekā}
-  \rdg[wit={E}]{ekaḥ}
-  \rdg[wit={U1}]{ekāṃ}
-  \rdg[wit={N2,U2}]{\om}}
-\app{\lem[wit={U1},alt={pārṣṇiḥ}]{pārṣṇi\skp{r-mū}}
-  \rdg[wit={D,K,K1,N1}]{pārṣṇiḥ}
-  \rdg[wit={B,E,L,P}]{pārṣṇir ādau}
-    \rdg[wit={N2,U2}]{\om}
-}\app{\lem[wit={ceteri},alt={mūlādhāre}]{\skm{r-mū}lādhāre}
-a  \rdg[wit={B,U1}]{mūlādhāra}
-  \rdg[wit={L}]{mūlādhārā}
-  \rdg[wit={D,K1}]{mūlādhārai}
-  \rdg[wit={J}]{mūlādhāraṃ}
-    \rdg[wit={N2,U2}]{\om}}
-\app{\lem[wit={ceteri}]{sthāpyate}
-    \rdg[wit={N2,U2}]{\om}}/
-%-----------------------------
-% tasya pādasyāṃguṣṭhamūle      parasya  pādasya pārṣṇiḥ sthāpyate// tadagniḥ pradīpyate//  \E [P.41]
-% tasya pādasyāṃguṣṭhamūle     'parasya  pādasya pārṣṇiḥ sthāpyate   tadagnīḥ pradipyate    \P
-% tasya pādasyāṃguṣṭhamūle     aparasya  pādasya pārṣṇiḥ sthāpyate// tadagnīḥ pradipyate//  \B
-% tasya pādasyāṃguṣṭhamūle     aparasya  pādasya pārṣṇiḥ sthāpyate// tadāgnīḥ pradivyate//  \L
-% tasya pādasya aṃguṣṭhamūlaṃ/ aparasya  pādasya pārṣṇiḥ sthāpyaṃ       agnir    dāpyate?!/ \N1
-% tasya pādasyāṃguṣṭhamūle//   aparasya  pādasya pārṣṇiḥ sthāpyaṃ//     agnir    dīpyate//  \D
-% tasya pādasyāṃguṣṭhamūlaṃ//  aparasya  pādasya pārṣṇiḥ sthāpyaṃ     agnir    dīpyate//  \K1
-% tasya pādasya aṃguṣṭhamūlaṃ   aparasya          pārṣṇi  sthāpyate//          akṣipyate//    \J  
-% tasya pādasyāṃguṣṭhamūle//   aparasya  pādasya pārṇi---sthāpyaṃ       agni     dīpate//   \N2
-% tasya pādasya aṃguṣṭhamūlaṃ  aparasya          pārṣṇo  sthāpyate      agni     dīpyate    \U1
-% \om                                                                tadagnīḥ pradipyate//  \U2
-%-----------------------------
-%The heel of the other foot is caused to be placed at the root of the big toe of this foot. The fire is kindled. 
-%-----------------------------
-\app{\lem[wit={ceteri}]{tasya}
-  \rdg[wit={U2}]{\om}} 
-\app{\lem[wit={ceteri}]{pādasyāṅguṣṭhamūle}
-  \rdg[wit={N1,J,U1}]{pādasya aṃguṣṭhamūlaṃ}
-  \rdg[wit={U2}]{\om}
-}-\app{\lem[wit={E,P}]{'parasya}
-  \rdg[wit={ceteri}]{aparasya}
-  \rdg[wit={U2}]{\om}}
-\app{\lem[wit={ceteri}]{pādasya}
-  \rdg[wit={J,U1,U2}]{\om}}
-\app{\lem[wit={ceteri}]{pārṣṇiḥ}
-  \rdg[wit={J}]{pārṣṇi}
-  \rdg[wit={N2}]{pārṇi}
-  \rdg[wit={U1}]{pārṣṇo}
-  \rdg[wit={U2}]{\om}}
-\app{\lem[wit={ceteri}]{sthāpyate}
-  \rdg[wit={D,K1,N1,N2}]{sthāpyaṃ}
-  \rdg[wit={U2}]{\om}}/
-\app{\lem[wit={D,K1,N1}, alt={agnir}]{agni\skp{r-pra}}
-   \rdg[wit={N2,U1}]{agni}
-  \rdg[wit={E}]{tadagniḥ}
-  \rdg[wit={B,P,U2}]{tadagnīḥ}
-  \rdg[wit={L}]{tadāgniḥ}
-  \rdg[wit={J}]{\om}
-}\app{\lem[wit={E}, alt={pradīpyate}]{\skm{r-pra}dīpyate}
-  \rdg[wit={B,L,P,U2}]{pradipyate}
-  \rdg[wit={D,U1}]{dīpyate}
-  \rdg[wit={N1}]{dāpyate}
-  \rdg[wit={N2}]{dīpate}
-  \rdg[wit={J}]{akṣipyate}}/\linelabel{_77e}
+% (6) Within the blood is the sugar ocean. (7) Within the semen is the ocean of the nectar of immortality. Situated at [their] feet is the place of the turtle. 
+%----------------------------
+\app{\lem[wit={P,U1,U2}]{raktamadhye}
+  \rdg[wit={D,U1}]{vasāmadhye madhusamudraḥ || raktamadhye}
+  \rdg[wit={J}]{npāmadhye madhusamudraḥ || raktamadhye}
+  \rdg[wit={E}]{rasamadhye}}
+\app{\lem[wit={ceteri}]{ikṣusamudraḥ}
+  \rdg[wit={U1,U2}]{ikṣurasamudraḥ}
+  \rdg[wit={E,P}]{ikṣurasasamudraḥ}}\dd{}
+%\note[type=philcomm, labelb=278, lem={ikṣura°}]{Due to \textit{sandhi} \textit{akṣura°} would be exspected, but was probably misregarded for clarity.}
+vīryamadhye\app{\lem[wit={J,U1}]{'mṛtasamudraḥ}
+  \rdg[wit={D,K1}]{amṛtasamudraḥ}
+  \rdg[wit={E}]{svādusamudraḥ}
+  \rdg[wit={B,L}]{svādukasamudraḥ}
+  \rdg[wit={P}]{svādudakasamudraḥ}}\dd{}
+\app{\lem[wit={ceteri}]{pādamadhye}
+  \rdg[wit={B}]{karmasthāna pādasamadhye}
+  \rdg[wit={L}]{karmasthāna pādamadhye}
+  \rdg[wit={D,K1}]{pādam tale}}
+\app{\lem[wit={ceteri}]{kūrmasthānam}
+  \rdg[wit={D,J,K1,U1}]{kūrmastānaṃ}
+  \rdg[wit={B,L}]{\om}}\dd{}\linelabel{_106e}
 \end{prose}
   \end{edition}
   \begin{translation}
     \ekddiv{
-      head={[\uproman{30}. \textbf{Divisions of the wheels of support}]},
+      head={[\uproman{37}. \textbf{Seven oceans within the body}]},
       type=section,
       depth=2, 
-      n=XXX.1
+      n=XXXVII.1
     }
-    \xmlhead[h30]{[XXX. Divisions of the wheels of support]}
-    \begin{tlate}[p30_01]
-      \noindent
-      Now, the divisions of the group\footnote{I took \textit{cakra} in the sense of ``group, crowd, totality'', cf. \citeauthor[1958 (Vol. 2): 209]{petersburger}.} of supports\footnote{The practice of sixteen \textit{ādhāra}s goes back to the yoga traditions of Śaivism and is mentioned in texts such as \citetitle{tantraloka}, \citetitle{manthana} and \citetitle{netratantra}. The techniques were passed on, copied and recycled across the centuries among the yoga traditions of Haṭha- and Rājayoga. Besides Rāmacandra's text, the other texts which present full lists of the sixteen \textit{ādhāra}s are \textit{Netroddyota}-commentary of Kṣemarāja on \textit{Netratantra} 7.5; \citetitle{saradaavalon} 25.24-25; \citetitle{shivayogapradipika} 3.17-33; \citetitle{ssplonavla} 2.10-25; \citetitle{yogatarangini} 1.13 (Ed. p. 72-73) quotation with reference ``\textit{nityanāthapaddhatau}'' (maybe another recension of the \citetitle{ssplonavla}, see \citeauthor[2023: 149]{powell2023}); \citetitle{hathatattvakaumudi} 24.10-23 and 40.19; and \citetitle{jyotsna} on \citetitle{hathapradipika2024}, as well as \citetitle{ramatosana} (Ed. p. 839-841) quotation with reference ``\textit{yogasvarodaye}'' and \citetitle{yogakarnika} quotation with reference ``\textit{yogasvarodaye}'' 14-36. \textit{Haṭhasaṃketacandrikā} (cf. i.e. GOML R3239 f. 201 l. 20 - f. 204 ll. 5-6) directly quotes the \textit{Tattvayogabindu} without reference. Comparing the various lists of \textit{ādhāra}s reveals great variability. Rāmacandra's system draws from the \textit{Yogasvarodaya} and the \citetitle{ssplonavla}. When there are differences in the descriptions of the respective \textit{ādhāra}s among the texts I note them in the annotations without providing a reference again; for the Sanskrit, see the above-provided references.} are taught.%\footnote{Most of the previously mentioned \textit{cakra}s overlap with the \textit{ādhāra}s, except for the \textit{ākāśacakra}.}
-      
-     As a result of focusing on a light at the big toes of both feet, the gaze becomes steady.\footnote{In all previously mentioned systems, the big toe is the first \textit{ādhāra}. In most texts, the practitioner is instructed to fixate the mind onto the big toe - either one shall visualize a light there (as in \citetitle{shivayogapradipika}) or the light is already present. The \citetitle{saradaavalon}, however, instructs to fix \textit{prāṇa} in each \textit{ādhāra} listed. Here, the practice of the \textit{ādhāra}s is subsumed under the \textit{dhāraṇā}-limb of an eight-fold (\textit{aṣṭāṅga}) yoga system.}
-      
-     The root support is the second [one]. The heel of the back-foot is caused to be placed at the base of the big toe of the foot.\footnote{The base of the big toe of the foot (\textit{pādasyāṅguṣṭhamūla}) is probably the big toe joint of the foot or \textit{articulatio metatarsophalangealis hallucis}.} The fire is strengthened.
-     [In other words,] one heel is placed at the root support. The heel of the other foot is placed at the base of the big toe of this foot. The fire is kindled.\footnote{Rāmacandra combines the techniques presented in YSv and SSP for this \textit{ādhāra}, resulting in a \textit{siddhāsana}-like bodily position.}\fnsep\footnote{\textit{Netroddyota}, \citetitle{saradaavalon} and \citetitle{jyotsna} give the ankle (\textit{gulpha}) as the second \textit{ādhāra}.}
-
-      \flushpage 
-    \end{tlate}
+    \xmlhead[h37]{[XXXVII. Seven oeans within the body]}
+    \begin{tlate}[p37_01]
+     \noindent
+Now, the seven oceans within the body are taught.\footnote{Rāmacandra, who bases his descriptions of the seven oceans on the YSv (PT, pp. 842-43) (cf. sources on the previous page) changed the order of oceans sightly. The respective passage can be translated as follows: ``The seven oceans are taught to be situated within the body, [one of each] containing salt (\textit{lavaṇa}), sugar (\textit{ikṣu}), wine (\textit{surā}), butter (\textit{sarpir}), sour milk (\textit{dadhi}), milk (\textit{dugdha}) and water (\textit{jala}). (1) Salt is within the sweat, (2) sugar in the blood, (3) wine in the skin, (4) ghee in the fat, (5-6) sour milk and milk in the forehead. (7) The nectar of immortality is known to be situated within the semen. A big turtle* (*the earth imagined as a tortoise floating on water) is situated at their feet.''} (1) Within the sweat is the salt ocean. (2) Within the forehead is the milk ocean. (3) Within the marrow is the honey ocean. (4) In the phlegm is the sour milk ocean. (5) In the fat is the ghee ocean. (6) Within the blood is the sugarcane ocean. (7) Within the semen is the ocean of the nectar of immortality. Situated at the feet is the place of the turtle.\footnote{The earth consisting of seven islands with mount meru in its centre represented as a tortoise floating on waters of the seven oceans, cf. \citetitle{markandeya} 58, \citetitle{bhagavata} 5.16-26 and \citeauthor[2009: 354]{bryant2009}.}
+\flushpage
+\end{tlate}
   \end{translation}
 \end{alignment}
-\pagebreak %after pp. 71-72
+\pagebreak %after pp. 115-116
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+ \begin{alignment}[
+  texts=edition[class="edition"];
+  translation[class="translation"],
+  ]
+  \begin{edition}
+\ekddiv{
+  head={[\uproman{38}. \textbf{navadvāramadhye navakhaṇḍāni}]},
+  type=section,
+  depth=2, 
+  n=XXXVIII
+}
+\xmlhead[h38]{[XXXVIII. navadvāramadhye navakhaṇḍāni]}
+\phantomsection
+\addcontentsline{toc}{section}{XXXVIII. navadvāramadhye navakhaṇḍāni}
+\phantomsection\label{ninecontinents}
+    \begin{prose}[p38_01]
+      \noindent
+%----------------------------      
+%idānīṃ navadvāreṣu                                                                                 nāsikayoḥ kinnarakhaṃḍanaraharikhaṃḍauḥ netrayoḥ ketumāla bhadrāśvau/ karṇayoḥ hiraṇmayakhaṃḍa ramyakakhaṃḍau/ gude kurukhaṃḍaḥ   liṃge ilāvṛtakhaṇḍaḥ// \E  [p.51]
+%idānīṃ navadvāreṣu     navakhaṃjani? kathyaṃte                              mukhe bharatakhaṃḍaḥ 1 nāsikayoḥ kinarakhaṃḍe 3                netrayoḥ ketumāla bhadrāśve 4 karṇayor hiraṇmayaramyaka khaṃdaḥ 5      gude kurukhaṃḍaḥ 6 liṃge ilāvṛtaḥ 7  \P 7659.jpg!!!
+%idānīṃ                 navakhaṃḍāni  kathyaṃte/                             mukhe bharatakhaṃḍaḥ   nāsikayor madhye kināraharikhaṃḍā/      netrayo ketumāla bhadrāsve/   karṇayor hiraṇyamayaramyakhaṃḍaḥ/        gude kurukhaṃḍāḥ/  liṃge iḍṛttaṃ??/ \B DSCN7169.JPG Z.4
+%idānīṃ                 navakhaṃḍāni  kathyaṃte//                            mukhe bharatakhaṃḍaḥ// nāsikayor madhye kinārasiṃhakhaṃḍā      netrayo ketumāla bhadrāsve//   karṇayor hiraṇyamayaramyakhaṃḍaḥ        gude kurukhaṃḍāḥ//  liṃge ilāvṛtaṃ// \L   0025.jpg
+%\om                                                                 \N1
+%idānīṃ navadvāramadhye navakhaṃḍāḥ   kathyaṃte//                                  bharatakhaṃḍaḥ/ kāśmīrakhaṃḍaḥ/ strīmaṃḍalakhaṃḍaḥ/     dvijakhaṃḍaḥ/ ekapādakhaṃḍaḥ/  rākṣasakhaṃḍaḥ  gāṃdhārakhaṃḍaḥ// kaivarttakhaṃḍaḥ// garbhakhaṃḍaḥ// \D %%%p.14 verso
+%idānīṃ navadvāramadhye navakhaṃḍāḥ   kathyaṃte//                                  bharatakhaṃḍaḥ/ kāśmīrakhaṃḍaḥ/ strīmaṃḍalakhaṃḍaḥ/     dvijakhaṃḍaḥ// ekapādakhaṃḍaḥ//  rākṣasakhaṃḍaḥ  ghāṃdhārakhaṃḍaḥ// kaivarttakhaṃḍaḥ// garbhakhaṃḍaḥ// \K1
+%idānīṃ navadvāramadhye navakhaṃḍāḥ   kathyaṃte//                                  bharatakhaṃḍaḥ// kāśmīrakhaṃḍaḥ// strīmaṃḍalakhaṃḍaḥ//     dvijakhaṃḍaḥ// ekapādakhaṃḍaḥ//  rākṣasakhaṃḍaḥ//  gāṃdhārakhaṃḍaḥ// kaivarttakhaṃḍaḥ// garbhakhaṃḍaḥ//cha// \J      
+%\om                                                                 \N2
+%idānīṃ navadvāramadhye navakhaṃḍāḥ   kathyate                                     bharatakhaṃḍaḥ  kāsmīrakhaṃḍaḥ strīmaṃḍalakhaṃḍaḥ   ???dvīttakhaṃḍaḥ yekapādakhaṃḍaḥ rākṣasakhaṃḍaḥ gaṃdhārakhaṃḍaḥ  kaivartakhaṃḍaḥ   garbhakaṃḍhaḥ \U1
+%idānīṃ navadvāreṣu     navakhaṃḍāṇi  kathyaṃte// pādamadhye kūrmasthānaṃ// mukhaṃ bhāratakhaṃḍaṃ// nāsikayoḥ// kinnara// harikhaṃḍa//       netrayoḥ// ketumāla// bhadraśve karṇayoḥ// hiraṇmaya// ramyakakaṃḍe// gude kurukhaṃḍaṃ// liṃge ulāvṛtaṃ// evaṃ navakhaṃḍāḥ//    \U2
+%-----------------------------
+%Now, the nine continents within the nine doors are taught: Bharata (1), Kaśmīra (2), Strīmaṃḍala (3), Dvija (4), Ekapāda (5), Rākṣasa (6), Ghandhāra (7), Kaivartta (8) [and] Garbha (9). 
+%----------------------------
+\note[type=source, labelb=_107b, labele=_107e, nosep]{cf. YSv (PT, p. 843): idānīn tu navadvāre navakhaṇḍāni saṃśṛṇu | pāyvādau bhārataṃ khaṇḍaṃ kāśmīraṃ trikamaṇḍalam | dvijakhaṇḍam ekapādaṃ khaṇḍaṃ vakṣye samaṇḍalam | kaivarttaṃ garttagāndhāraṃ navakhaṇḍam iti sthitam |}
+\note[type=source, labelb=_107b, labele=_107e, nosep]{cf. SSP 3.9 (Ed. p. 55): navakhaṇḍāḥ nava dvāreṣu vasanti| bhāratakhaṇḍaḥ kāśmīrakhaṇḍaḥ karparakhaṇḍaḥ śrīkhaṇḍaḥ śaṅkhakhaṇḍaḥ ekapādakhaṇḍaḥ gāndhārakhaṇḍaḥ kaivartakhaṇḍaḥ mahāmerukhaṇḍaḥ evaṃ navakhaṇḍāḥ |}
+%\note[type=philcomm, labelb=280, lem={\uproman{38}\textsuperscript{\lowroman{1}-\lowroman{2}}}]{There is complete divergence between the two main groups of manuscripts. I edited according to the \beta-group, since their readings are very close to the source texts.}% These are the well-known nine \textit{dvīpa}s or islands ruled by nine sons of Ṛṣabhadeva, which are the nine \textit{varṣa}s of Jambudvīpa, viz., Bhārata, Kinnara, Hari, Kuru, Hiraṇmaya, Ramyaka, Ilāvṛta, Bhadrāśva and Ketumāla.}
+idānīṃ\linelabel{_107b}
+\app{\lem[wit={D,E,J,K1,U1}]{navadvāramadhye}
+  \rdg[wit={E,P,U2}]{navadvāreṣu}
+  \rdg[wit={B,L}]{\om}}\hfill
+\app{\lem[wit={B,P,L,U2}]{navakhaṇḍāni}
+  \rdg[wit={D,J,K1,U1}]{navakhaṃḍāḥ}
+  \rdg[wit={E}]{\om}}\hfill
+\app{\lem[wit={ceteri}]{kathyante}
+  \rdg[wit={U1}]{kathyate}}/\hfill
+\app{\lem[wit={D,J,K1,U1}]{bharatakhaṇḍaḥ}
+  \rdg[wit={B,P,L}]{mukhe bharatakhaṃḍaḥ}
+  \rdg[wit={U2}]{pādamadhye kūrmasthānaṃ || mukhaṃ bhāratakhaṃḍaṃ}
+  \rdg[wit={E}]{\om}}\dd{}\hfill
+\app{\lem[wit={D,J,K1,U1}]{kāśmīrakhaṃḍaḥ}
+  \rdg[wit={E}]{nāsikayoḥ kinnarakhaṃḍanaraharikhaṃḍauḥ}
+  \rdg[wit={P}]{nāsikayoḥ kinarakhaṃḍe 3}
+  \rdg[wit={B}]{nāsikayor madhye kināraharikhaṃḍā}
+  \rdg[wit={L}]{nāsikayor madhye kinārasiṃhakhaṃḍā}
+  \rdg[wit={U2}]{nāsikayoḥ || kinnara || harikhaṃḍa}}\dd{}\hfill
+\app{\lem[wit={D,J,K1,U1}, alt={strīmaṇḍalakhaṇḍaḥ}]{strī:\\maṇḍalakhaṇḍaḥ}
+  \rdg[wit={ceteri}]{\om}}\dd{}\hfill
+\app{\lem[wit={D,J,K1,U1}]{dvijakhaṇḍaḥ}
+  \rdg[wit={E}]{netrayoḥ ketumāla bhadrāśvau}
+  \rdg[wit={P}]{netrayoḥ ketumāla bhadrāśve 4}
+  \rdg[wit={B,L}]{netrayo ketumāla bhadrāsve}
+  \rdg[wit={U2}]{netrayoḥ || ketumāla || bhadraśve}}\dd{}\hfill
+\app{\lem[wit={D,J,K1}]{ekapādakhaṇḍaḥ}
+  \rdg[wit={U1}]{yekapādakhaṃḍaḥ}
+  \rdg[wit={ceteri}]{\om}}\dd{}\hfill
+\app{\lem[wit={D,J,K1,U1}]{rākṣasakhaṇḍaḥ}
+  \rdg[wit={E}]{karṇayoḥ hiraṇmayakhaṃḍa ramyakakhaṃḍau}
+  \rdg[wit={P}]{karṇayor hiraṇmayaramyakakhaṃdaḥ 5}
+  \rdg[wit={B,L}]{karṇayor hiraṇyamayaramyakhaṃḍaḥ}
+  \rdg[wit={U2}]{karṇayoḥ || hiraṇmaya || ramyakakaṃḍe}}\dd{}\hfill
+\app{\lem[wit={D,J,K1}]{gāndhārakhaṇḍaḥ}
+  \rdg[wit={U1}]{gaṃdhārakhaṇḍaḥ}
+  \rdg[wit={E}]{gude kurukhaṃḍaḥ}
+  \rdg[wit={P}]{gude kurukhaṃḍaḥ 6}
+  \rdg[wit={B,L}]{gude kurukhaṃḍāḥ}
+  \rdg[wit={U2}]{gudekurukhaṃḍaṃ}}\dd{}\\
+\app{\lem[wit={D,J,K1,U1}, alt={kaivarttakhaṇḍaḥ}]{kaivarttakhaṇḍaḥ}
+  \rdg[wit={E}]{liṃge ilāvṛtakhaṇḍaḥ}
+  \rdg[wit={P}]{liṃge ilāvṛtaḥ 7}
+  \rdg[wit={B,L}]{ilāvṛtaṃ}
+  \rdg[wit={U2}]{liṃge ulāvṛtaṃ}}\dd{}
+\app{\lem[wit={D,K1,U1}]{garbhakhaṇḍaḥ}
+  \rdg[wit={J}]{garbhakhaṇḍaḥ || cha ||}
+  \rdg[wit={U2}]{evaṃ navakhaṃḍāḥ}
+  \rdg[wit={ceteri}]{\om}}\dd{}\linelabel{_107e}%\vspace*{\fill}
+\end{prose}
+  \end{edition}
+  \begin{translation}
+\ekddiv{
+  head={[\uproman{38}. \textbf{Nine regions within the nine Doors}]},
+  type=section,
+  depth=2, 
+  n=XXXVIII.1
+}
+\xmlhead[h38]{[XXXVIII. Nine regions within the nine Doors]}
+\begin{tlate}[p38_01] \noindent
+  Now, the nine continents\footnote{The island of Jambudvīpa consists of nine continents.} within the nine orifices\footnote{The nine doors (\textit{navadvāra}) refer to the nine openings of the body: mouth, nostrils, eyes, ears, anus and gender.} are taught: Bharata (1), Kāśmīra (2), Strīmaṇḍala (3), Dvija (4), Ekapāda (5), Rākṣasa (6), Gāndhāra (7), Kaivartta (8) [and] Garbha (9).\footnote{There is a complete divergence between the two main groups of manuscripts. I have edited according to the \beta-group, since its readings are much closer to the source texts. A thoughtful scribe of the \gamma-group must have been dissatisfied with the original nomenclature and the supposedly original absence of the names of the nine doors in his exemplar, and therefore felt compelled to rewrite the passage. Consequently, the \gamma-group transmits this section with an alternative nomenclature for the nine regions and includes the complete set of the names of the nine doors. These names are partially preserved in the \citetitle{ramatosana} and entirely absent from the \citetitle{ssplonavla}. The \gamma-group locates (1) the Bharatakhaṇḍa within the mouth, (2–3) the Kinnara- and Harikhaṇḍa in the two nostrils, (4–5) the Ketumāla- and Bhadrāśva[-khaṇḍa] in the eyes, (6–7) the Hiraṇyamaya- and Ramyaka[-khaṇḍa] in the ears, (8) the Kurukhaṇḍa at the anus, and (9) the Ilāvṛta[-khaṇḍa] at the genitals. This system, along with a detailed and elaborate description, is presented in \citetitle{parakhya} 5.61–93.}
+  \flushpage
+  \end{tlate}
+  \end{translation}
+\end{alignment}
+\pagebreak %after pp. 117-118
 \cleardoublepage
 \selectlanguage{english}
 \chapter{Appendix}
